Splitting a sentence into words

--- a/desktop.ini
+++ b/desktop.ini
@@ -2,3 +2,6 @@
 Evil_Num.ctxt=@Evil_Num.ctxt,0
 Evil_Num.class=@Evil_Num.class,0
 Evil_Num.java=@Evil_Num.java,0
+Sentence_Spilter.ctxt=@Sentence_Spilter.ctxt,0
+Sentence_Spilter.class=@Sentence_Spilter.class,0
+Sentence_Spilter.java=@Sentence_Spilter.java,0
