Using a single string and performing actions on that string

--- a/desktop.ini
+++ b/desktop.ini
@@ -5,3 +5,6 @@ Evil_Num.java=@Evil_Num.java,0
 Sentence_Spilter.ctxt=@Sentence_Spilter.ctxt,0
 Sentence_Spilter.class=@Sentence_Spilter.class,0
 Sentence_Spilter.java=@Sentence_Spilter.java,0
+String_Program.ctxt=@String_Program.ctxt,0
+String_Program.class=@String_Program.class,0
+String_Program.java=@String_Program.java,0
