Convert decimal numbers into its binary form

--- a/desktop.ini
+++ b/desktop.ini
@@ -8,3 +8,6 @@ Sentence_Spilter.java=@Sentence_Spilter.java,0
 String_Program.ctxt=@String_Program.ctxt,0
 String_Program.class=@String_Program.class,0
 String_Program.java=@String_Program.java,0
+Binary_Conversion.ctxt=@Binary_Conversion.ctxt,0
+Binary_Conversion.class=@Binary_Conversion.class,0
+Binary_Conversion.java=@Binary_Conversion.java,0
