Make a triangle pattern with stars

--- a/desktop.ini
+++ b/desktop.ini
@@ -11,3 +11,6 @@ String_Program.java=@String_Program.java,0
 Binary_Conversion.ctxt=@Binary_Conversion.ctxt,0
 Binary_Conversion.class=@Binary_Conversion.class,0
 Binary_Conversion.java=@Binary_Conversion.java,0
+Triangle_Pattern_Program.ctxt=@Triangle_Pattern_Program.ctxt,0
+Triangle_Pattern_Program.class=@Triangle_Pattern_Program.class,0
+Triangle_Pattern_Program.java=@Triangle_Pattern_Program.java,0
