Making a inverted triangle

--- a/desktop.ini
+++ b/desktop.ini
@@ -14,3 +14,6 @@ Binary_Conversion.java=@Binary_Conversion.java,0
 Triangle_Pattern_Program.ctxt=@Triangle_Pattern_Program.ctxt,0
 Triangle_Pattern_Program.class=@Triangle_Pattern_Program.class,0
 Triangle_Pattern_Program.java=@Triangle_Pattern_Program.java,0
+Pattern_Pro.ctxt=@Pattern_Pro.ctxt,0
+Pattern_Pro.class=@Pattern_Pro.class,0
+Pattern_Pro.java=@Pattern_Pro.java,0
