Seeing the number of words in a sentence that is a palindrome

--- a/desktop.ini
+++ b/desktop.ini
@@ -17,3 +17,6 @@ Triangle_Pattern_Program.java=@Triangle_Pattern_Program.java,0
 Pattern_Pro.ctxt=@Pattern_Pro.ctxt,0
 Pattern_Pro.class=@Pattern_Pro.class,0
 Pattern_Pro.java=@Pattern_Pro.java,0
+Palidrome_Word.ctxt=@Palidrome_Word.ctxt,0
+Palidrome_Word.class=@Palidrome_Word.class,0
+Palidrome_Word.java=@Palidrome_Word.java,0
